@@ -267,6 +267,11 @@ also in Hatari</b>.</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Seven Gates Of Jambala</td>
+      <td>1.3</td>
+      <td>Use a very rare mode for timer B to count start of line</td>
+    </tr>
+    <tr>
       <td>Skweek</td>
       <td>before 1.0</td>
       <td>Does not work with cartridge / HD emulation</td>
